fix name, add crud
