# docs/swagger.yaml
@@ -1,5 +1,10 @@
 basePath: /api/v1
 definitions:
+  types.EntityRequest:
+    properties:
+      description:
+        type: string
+    type: object
   types.FailureErrorResponse:
     properties:
       error:
@@ -14,13 +19,6 @@ definitions:
       message:
         type: string
       status:
-        type: string
-    type: object
-  types.GetMeResponse:
-    properties:
-      email:
-        type: string
-      id:
         type: string
     type: object
   types.SuccessResponseData:
@@ -41,7 +39,14 @@ paths:
     post:
       consumes:
       - application/json
-      description: Test endpoint
+      description: Test endpoint crud
+      parameters:
+      - description: Entity data
+        in: body
+        name: company
+        required: true
+        schema:
+          $ref: '#/definitions/types.EntityRequest'
       produces:
       - application/json
       responses:
@@ -49,7 +54,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/types.GetMeResponse'
+              $ref: '#/definitions/types.SuccessResponseData'
             type: array
         "400":
           description: Bad Request
@@ -63,7 +68,67 @@ paths:
       - ApiKeyAuth: []
       summary: CreateEntity info
       tags:
-      - info
+      - Entity
+  /entity/delete/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Test endpoint crud
+      parameters:
+      - description: Entity ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/types.SuccessResponseData'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/types.FailureResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/types.FailureErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: DeleteEntity info
+      tags:
+      - Entity
+  /entity/get:
+    get:
+      consumes:
+      - application/json
+      description: Test endpoint crud
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/types.SuccessResponseData'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/types.FailureResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/types.FailureErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: GetEntity info
+      tags:
+      - Entity
   /entity/test_grpc:
     get:
       consumes:
@@ -89,11 +154,23 @@ paths:
       summary: Test gRPC connection to auth service
       tags:
       - grpc
-  /entity/user_info:
-    get:
+  /entity/update/{id}:
+    patch:
       consumes:
       - application/json
-      description: Test endpoint
+      description: Test endpoint crud
+      parameters:
+      - description: Entity ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Entity data
+        in: body
+        name: company
+        required: true
+        schema:
+          $ref: '#/definitions/types.EntityRequest'
       produces:
       - application/json
       responses:
@@ -101,7 +178,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/types.GetMeResponse'
+              $ref: '#/definitions/types.SuccessResponseData'
             type: array
         "400":
           description: Bad Request
@@ -113,9 +190,9 @@ paths:
             $ref: '#/definitions/types.FailureErrorResponse'
       security:
       - ApiKeyAuth: []
-      summary: Get user info
+      summary: UpdateEntity info
       tags:
-      - info
+      - Entity
 securityDefinitions:
   ApiKeyAuth:
     description: Description for what is this security definition being used
